<resources>
    <string name="app_name">GuessingGame</string>
    <string name="action_settings">Settings</string>
    <string name="action_newgame">New Game</string>
    <string name="action_gamestats">Game stats</string>
    <string name="action_about">About</string>
    <string name="dr_payne_s_guessing_game">Dr. Payne\'s Guessing Game</string>
    <string name="enter_a_number_between_1_and_100">Enter a number between 1 and 100:</string>
    <string name="guess">Guess!</string>
    <string name="enter_a_number_and_click_guess">Enter a number and click Guess!</string>
    <string name="settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="game_stats">Game Stats</string>
    <string name="about">About</string>
</resources>
