<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.zuzannarosinska.guessinggame1.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_newgame"
        android:orderInCategory="2"
        android:title="@string/action_newgame"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_gamestats"
        android:orderInCategory="3"
        android:title="@string/action_gamestats"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="4"
        android:title="@string/action_about"
        app:showAsAction="ifRoom" />
</menu>
